--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  overflow-x: hidden;
 }
 
 p,
@@ -56,7 +56,17 @@ a {
   padding: 10px 24px;
 }
 
-/* Header Section - Navigation Menu */
+img {
+  transform: scale(1);
+  transition: transform 1s ease;
+}
+
+img:hover {
+  transform: scale(1.1);
+  transition: transform 1s ease;
+}
+
+/* Navigation Menu */
 header {
   background-color: #2d25a0;
 }
@@ -64,7 +74,7 @@ header {
 nav,
 main,
 section {
-  width: 1142px;
+  max-width: 1142px;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -73,11 +83,28 @@ section {
   margin: 0 auto;
 }
 
-.nav-items a {
+ul {
+  display: flex;
+}
+
+ul > li {
+  list-style-type: none;
+}
+
+.hamburger-menu {
+  display: none;
+}
+
+ul,
+.nav-items {
+  padding: 0;
+}
+
+.nav-menu a {
   padding-right: 36px;
 }
 
-.nav-items a:hover {
+.nav-menu a:hover {
   color: #c4c4c4;
 }
 
@@ -86,7 +113,7 @@ section {
   padding-right: 8px;
 }
 
-/* Header Section - Main Banner */
+/* Main Banner */
 .banner {
   padding-bottom: 44px;
 }
@@ -105,7 +132,6 @@ section {
 .all-players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 15px;
 }
 
 .player-box {
@@ -126,6 +152,7 @@ section {
 .highlights {
   display: flex;
   justify-content: space-between;
+  padding-top: 80px;
 }
 
 .highlights-text p {
@@ -133,9 +160,10 @@ section {
   padding-bottom: 24px;
 }
 
-.match img {
+.hightlights-image img {
   width: 567px;
   height: 427px;
+  padding: 16px;
 }
 
 /* Footer */
@@ -147,6 +175,17 @@ footer {
   margin-top: 150px;
 }
 
+footer img {
+  width: 400px;
+  transform: none;
+  transition: none;
+}
+
+footer img:hover {
+  transform: none;
+  transition: none;
+}
+
 .social-links img {
   width: 32px;
   height: 32px;
@@ -156,4 +195,98 @@ footer {
 .copy {
   padding-bottom: 60px;
   margin: 0;
+}
+
+/* Media Query */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  /* Responsive Navigation Menu */
+  nav {
+    width: auto;
+    height: auto;
+    justify-content: space-between;
+    padding: 33px 21px 46px 16px;
+    margin: 0;
+  }
+
+  .nav-items {
+    display: none;
+  }
+
+  .hamburger-menu {
+    display: block;
+    font-size: 1.5em;
+  }
+
+  /* Responsive Main Banner */
+  main {
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    padding: 16px;
+  }
+
+  h1 {
+    font-size: 2.25em;
+    line-height: 50px;
+  }
+
+  .banner img {
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
+  }
+
+  /* Responsive All Players */
+  .all-players {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 15px;
+    margin: 0;
+  }
+  /* Responsive Highlights */
+  .highlights {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+  }
+
+  .highlights-text {
+    padding: 16px;
+  }
+
+  .highlights-text h2 {
+    font-size: 1.875em;
+    line-height: 40px;
+    margin: 0;
+  }
+
+  .hightlights-image img {
+    width: 90%;
+    height: auto;
+  }
+
+  /* Responsive Footer */
+  footer {
+    margin-top: 0px;
+  }
+
+  footer img {
+    width: 225px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
 }
